Update setup.ini wpa index

--- a/www/app/setup.ini
+++ b/www/app/setup.ini
@@ -22,7 +22,7 @@ APP.display = standalone
 APP.theme_color = black
 APP.default_locale = id
 APP.background_color = #f0fafc
-APP.start_url = index
+APP.start_url = "./"
 APP.version = 0.1.0
 
 ;always set route POST method to active auto reload
