Update setup.ini db config

--- a/www/app/setup.ini
+++ b/www/app/setup.ini
@@ -34,9 +34,9 @@ DEV.minified=true
 
 ; set your database parameter below
 ; $f3->db object will available if connected 
-SQL.host=mysql:host=127.0.0.1
+SQL.host=127.0.0.1
 SQL.user=root
-SQL.pass=123
+;SQL.pass=123
 ;SQL.name=nothing
 
 [routes]
