--- a/www/app/setup.ini
+++ b/www/app/setup.ini
@@ -38,6 +38,8 @@ SQL.host=127.0.0.1
 SQL.user=root
 ;SQL.pass=123
 ;SQL.name=nothing
+;SQL.port=nothing
+
 
 [routes]
 ; this is example default route
