--- a/www/app/setup.ini
+++ b/www/app/setup.ini
@@ -37,8 +37,8 @@ DEV.minified=true
 SQL.host=127.0.0.1
 SQL.user=root
 ;SQL.pass=123
-;SQL.name=nothing
-;SQL.port=nothing
+;SQL.name=dbname
+;SQL.port=3307
 
 
 [routes]
