--- a/www/app/setup.ini
+++ b/www/app/setup.ini
@@ -15,12 +15,14 @@ ONERROR=models::error
 APP.name = PHP Project APP 
 APP.lang = id 
 APP.icons = "assets/img/icon-192.png;assets/img/icon-512.png" ;add more icons
-APP.scope = "."
+;To display the Richer Install UI dialog developers need to add
+;at least one screenshot for the corresponding.
+APP.screenshots = "" 
 APP.short_name = PPA
 APP.description = This is a PHP Project APP.
 APP.display = standalone
+APP.orientation = any
 APP.theme_color = black
-APP.default_locale = id
 APP.background_color = #f0fafc
 APP.start_url = "./"
 APP.version = 0.1.0
