--- a/www/app/setup.ini
+++ b/www/app/setup.ini
@@ -11,20 +11,22 @@ TEMP=../tmp/
 ;set error page message
 ONERROR=models::error
 
-;manifest data for this project 
+;Set PWA Manifest data for this project, then
+;add <link rel="manifest" href="manifest.json"> in head tag of html element 
 APP.name = PHP Project APP 
 APP.lang = id 
-APP.icons = "assets/img/icon-192.png;assets/img/icon-512.png" ;add more icons
-;To display the Richer Install UI dialog developers need to add
-;at least one screenshot for the corresponding.
-APP.screenshots = "" 
+; must same home site on routes
+APP.start_url = "./"
 APP.short_name = PPA
 APP.description = This is a PHP Project APP.
 APP.display = standalone
 APP.orientation = any
 APP.theme_color = black
 APP.background_color = #f0fafc
-APP.start_url = "./"
+APP.icons = "assets/img/icon-192.png;assets/img/icon-512.png" ;add more icons
+;To display the Richer Install UI dialog developers need to add
+;at least one screenshot for the corresponding.
+APP.screenshots = "" 
 APP.version = 0.1.0
 
 ;always set route POST method to active auto reload
