--- a/www/app/setup.ini
+++ b/www/app/setup.ini
@@ -9,6 +9,7 @@ PACKAGE=Fatfree V3 (PHP 7.4.33)
 ;temporary folder
 TEMP=../tmp/
 ;set error page message
+;will autocreate as sample error
 ONERROR=models::error
 
 ;Set PWA Manifest data for this project, then
@@ -24,7 +25,7 @@ APP.description = This is a PHP Project APP.
 APP.icons = "assets/img/icon-192.png;assets/img/icon-512.png" ;add more icons
 ;To display the Richer Install UI dialog developers need to add
 ;at least one screenshot for the corresponding.
-APP.screenshots = "" 
+;APP.screenshots = "assets/img/view.mob.png;assets/img/wide.png;assets/img/wide2k.png;assets/img/wide4k.png;" 
 APP.orientation = any
 APP.display = standalone
 APP.version = 0.1.0
