--- a/www/app/setup.ini
+++ b/www/app/setup.ini
@@ -11,7 +11,12 @@ TEMP=../tmp/
 ;set error page message
 ;will autocreate as sample error
 ONERROR=models::error
-
+;Set SPA data to this project 
+;header body footer
+;minimum main is set to this project
+SPA.main = main
+SPA.head = header
+SPA.foot = footer
 ;Set PWA Manifest data for this project, then
 ;add <link rel="manifest" href="manifest.json"> in head tag of html element 
 APP.name = PHP Project APP 
