--- a/www/app/setup.ini
+++ b/www/app/setup.ini
@@ -11,16 +11,13 @@ TEMP=../tmp/
 ;set error page message
 ;will autocreate as sample error
 ONERROR=models::error
-;Set SPA data to this project 
-;header body footer
-;minimum main is set to this project
-SPA.main = main
-SPA.head = header
-SPA.foot = footer
+
 ;Set PWA Manifest data for this project, then
 ;add <link rel="manifest" href="manifest.json"> in head tag of html element 
 APP.name = PHP Project APP 
 APP.lang = id 
+;Set SPA mode to true (single page application)
+APP.mode_spa = false
 ; must same home site on routes
 APP.start_url = "./"
 APP.short_name = PPA
