--- a/www/app/setup.ini
+++ b/www/app/setup.ini
@@ -14,10 +14,10 @@ ONERROR=models::error
 
 ;Set PWA Manifest data for this project, then
 ;add <link rel="manifest" href="manifest.json"> in head tag of html element 
+;Set SPA mode to true (single page application) (optional)
+APP.mode_spa = false
 APP.name = PHP Project APP 
 APP.lang = id 
-;Set SPA mode to true (single page application)
-APP.mode_spa = false
 ; must same home site on routes
 APP.start_url = "./"
 APP.short_name = PPA
