add index router for default

--- a/www/app/setup.ini
+++ b/www/app/setup.ini
@@ -50,5 +50,6 @@ SQL.user=root
 [routes]
 ; this is example default route
 GET|POST / = models::index
+GET|POST /index = models::index
 ; custom route for allow origin by adding [*] before equal
 ; for example: GET|POST / [*] = models::index
