--- a/www/app/setup.ini
+++ b/www/app/setup.ini
@@ -12,12 +12,23 @@ TEMP=../tmp/
 ;will autocreate as sample error
 ONERROR=models::error
 
+;APP Veriables is for PWA and SPA
 ;Set PWA Manifest data for this project, then
 ;add <link rel="manifest" href="manifest.json"> in head tag of html element 
-;Set SPA mode to true (single page application) (optional)
-APP.mode_spa = false
 APP.name = PHP Project APP 
 APP.lang = id 
+
+;SPA mode (single page application) (optional)
+;since SPA mode set to true will generate file name spa_index.htm for the experimental
+;if the spa_index.htm removed, script will regenerate it by default
+;just multiple/clone spa_index.htm file to your routes, for example "spa_new_page.htm"
+;then replace the scripts below to every directory models/your_route_name.php  (inside the function)
+;
+;$f3->styles("app.css");
+;$f3->scripts("app.js");
+;$f3->view('app/templates/spa_new_page.htm');
+APP.mode_spa = false
+
 ; must same home site on routes
 APP.start_url = "./"
 APP.short_name = PPA
