--- a/www/app/setup.ini
+++ b/www/app/setup.ini
@@ -1,5 +1,10 @@
 ;this is ini style configurations
 ;you can use this file to setup your project
+;for security issue, it's recomanded to place this file 
+;to out of main folder location
+;and change location script in index.php file, example..
+;build::base('../other/setting/setup.ini')->run();
+
 [globals]
 ENCODING=UTF-8
 ;extend package for header powered-by
