add setup commnets

--- a/www/app/setup.ini
+++ b/www/app/setup.ini
@@ -48,11 +48,13 @@ APP.orientation = any
 APP.display = standalone
 APP.version = 0.1.0
 
-;always set route POST method to active auto reload
+;DEV Variable : to set app as development or production mode
+;read more: https://github.com/ryzaer/fatfree-skeleton
+;(if true) always set route POST method to active auto reload
 DEV.auto=true
-;auto write function views in models folder
+;(if true) auto write function views in models folder
 DEV.model=true
-;render and minify all css,js & html
+;(if true) render and minify all css,js & html
 DEV.minified=true
 
 ; set your database parameter below
