--- a/www/app/setup.ini
+++ b/www/app/setup.ini
@@ -26,12 +26,12 @@ APP.lang = id
 ;SPA mode (single page application) (optional)
 ;since SPA mode set to true will generate file name spa_index.htm for the experimental
 ;if the spa_index.htm removed, script will regenerate it by default
-;just multiple/clone spa_index.htm file to your routes, for example "spa_new_page.htm"
+;just multiple/clone spa_index.htm file to your routes, for example "spa_contact.htm"
 ;then replace the scripts below to every directory models/your_route_name.php  (inside the function)
 ;
 ;$f3->styles("app.css");
 ;$f3->scripts("app.js");
-;$f3->view('app/templates/spa_new_page.htm');
+;$f3->view('app/templates/spa_index.htm');
 APP.mode_spa = false
 
 ; must same home site on routes
