--- a/www/app/setup.ini
+++ b/www/app/setup.ini
@@ -1,9 +1,12 @@
-;this is ini style configurations
-;you can use this file to setup your project
-;for security issue, it's recomanded to place this file 
-;to out of main folder location
-;and change location script in index.php file, example..
-;build::base('../other/setting/setup.ini')->run();
+;-----------------------------------;
+;THIS IS THE MAIN CONFIGURATION FILE;
+;-----------------------------------;
+;for security reasons, it is recommended to place 
+;this ini file outside the main folder location
+;change the script in index.php file, see the line
+;------------------------------------------------->
+;build::base('../other/folder/setup.ini')->run();
+;------------------------------------------------->
 
 [globals]
 ENCODING=UTF-8
@@ -17,21 +20,28 @@ TEMP=../tmp/
 ;will autocreate as sample error
 ONERROR=models::error
 
-;APP Veriables is for PWA and SPA
-;Set PWA Manifest data for this project, then
-;add <link rel="manifest" href="manifest.json"> in head tag of html element 
+;---------------------------------;
+;APP Veriables is for PWA and SPA ;
+;---------------------------------;
+;Set PWA Manifest data for this project
+;add the line below before </head> tag element 
+;it will automatically generate if APP.mode_spa is true
+;----------------------------------------------->
+; <link rel="manifest" href="manifest.json"> 
+;----------------------------------------------->
 APP.name = PHP Project APP 
-APP.lang = id 
+APP.lang = id
 
 ;SPA mode (single page application) (optional)
-;since SPA mode set to true will generate file name spa_index.htm for the experimental
-;if the spa_index.htm removed, script will regenerate it by default
-;just multiple/clone spa_index.htm file to your routes, for example "spa_contact.htm"
-;then replace the scripts below to every directory models/your_route_name.php  (inside the function)
-;
+;if SPA mode is set to true then the script will generate the file name "spa_index.htm" for experimental
+;do not delete spa_index.htm file, however the script will still recreate it by default
+;just multiple/clone it to your routes, for an example "spa_contact.htm"
+;for testing, replace the scripts below into models/index.php (inside the function)
+;--------------------------------------->
 ;$f3->styles("app.css");
 ;$f3->scripts("app.js");
 ;$f3->view('app/templates/spa_index.htm');
+;--------------------------------------->
 APP.mode_spa = false
 
 ; must same home site on routes
@@ -41,23 +51,23 @@ APP.theme_color = black
 APP.background_color = #f0fafc
 APP.description = This is a PHP Project APP.
 APP.icons = "assets/img/icon-192.png;assets/img/icon-512.png" ;add more icons
-;To display the Richer Install UI dialog developers need to add
-;at least one screenshot for the corresponding.
+;To display "Richer Install UI dialog developers" at least adding one screenshot for the corresponding.
+;uncommnet the following line to add screenshot......
 ;APP.screenshots = "assets/img/view.mob.png;assets/img/wide.png;assets/img/wide2k.png;assets/img/wide4k.png;" 
 APP.orientation = any
 APP.display = standalone
 APP.version = 0.1.0
 
-;DEV Variable : to set app as development or production mode
+;DEV Variable : set your app as development or production mode
 ;read more: https://github.com/ryzaer/fatfree-skeleton
-;(if true) always set route POST method to active auto reload
+;(if true) route will POST stat to active auto reload
 DEV.auto=true
 ;(if true) auto write function views in models folder
 DEV.model=true
 ;(if true) render and minify all css,js & html
 DEV.minified=true
 
-; set your database parameter below
+;set your database parameter below
 SQL.host=127.0.0.1
 SQL.user=root
 ;SQL.pass=123
