--- a/www/app/setup.ini
+++ b/www/app/setup.ini
@@ -25,10 +25,10 @@ ONERROR=models::error
 ;---------------------------------;
 ;Set PWA Manifest data for this project
 ;add the line below before </head> tag element 
-;it will automatically generate if APP.mode_spa is true
 ;----------------------------------------------->
 ; <link rel="manifest" href="manifest.json"> 
 ;----------------------------------------------->
+;but it will autocreate model if APP.mode_spa is true
 APP.name = PHP Project APP 
 APP.lang = id
 
