--- a/www/app/setup.ini
+++ b/www/app/setup.ini
@@ -1,12 +1,12 @@
-;-----------------------------------;
-;THIS IS THE MAIN CONFIGURATION FILE;
-;-----------------------------------;
+;------------------------------------;
+;THIS IS THE MAIN CONFIGURATION FILE ;
+;------------------------------------;
 ;for security reasons, it is recommended to place 
 ;this ini file outside the main folder location
 ;change the script in index.php file, see the line
-;------------------------------------------------->
+;------------------------------------------------>
 ;build::base('../other/folder/setup.ini')->run();
-;------------------------------------------------->
+;------------------------------------------------>
 
 [globals]
 ENCODING=UTF-8
@@ -25,9 +25,9 @@ ONERROR=models::error
 ;---------------------------------;
 ;Set PWA Manifest data for this project
 ;add the line below before </head> tag element 
-;----------------------------------------------->
+;-------------------------------------------->
 ; <link rel="manifest" href="manifest.json"> 
-;----------------------------------------------->
+;-------------------------------------------->
 ;but it will autocreate model if APP.mode_spa is true
 APP.name = PHP Project APP 
 APP.lang = id
@@ -44,10 +44,10 @@ APP.lang = id
 ;--------------------------------------->
 APP.mode_spa = false
 
-; must same home site on routes
+;home site on index route
 APP.start_url = "./"
 APP.short_name = PPA
-APP.theme_color = black
+APP.theme_color = white
 APP.background_color = #f0fafc
 APP.description = This is a PHP Project APP.
 APP.icons = "assets/img/icon-192.png;assets/img/icon-512.png" ;add more icons
@@ -74,10 +74,9 @@ SQL.user=root
 ;SQL.name=dbname
 ;SQL.port=3307
 
-
 [routes]
 ; this is example default route
 GET|POST / = models::index
 GET|POST /index = models::index
-; custom route for allow origin by adding [*] before equal
+; route will allow origin by adding [*] before equal
 ; for example: GET|POST / [*] = models::index
