--- a/www/app/setup.ini
+++ b/www/app/setup.ini
@@ -40,7 +40,8 @@ APP.lang = id
 ;--------------------------------------->
 ;$f3->styles("app.css");
 ;$f3->scripts("app.js");
-;$f3->view('app/templates/spa_index.htm');
+;create spa_index.htm in app/templates folder
+;$f3->view('spa_index.htm');
 ;--------------------------------------->
 APP.mode_spa = false
 
