--- a/www/app/setup.ini
+++ b/www/app/setup.ini
@@ -38,10 +38,12 @@ APP.lang = id
 ;just multiple/clone it to your routes, for an example "spa_contact.htm"
 ;for testing, replace the scripts below into models/index.php (inside the function)
 ;--------------------------------------->
-;$f3->styles("app.css");
-;$f3->scripts("app.js");
-;create spa_index.htm in app/templates folder
-;$f3->view('spa_index.htm');
+;custom your spa_index.htm in app/templates folder
+;and paste the code below inside the function in app/models/index.php
+;$f3->view('spa_index.htm',function($add){
+;    $add->css=["css1.css","css2.css"];
+;    $add->js=["https://releases.jquery.com/git/jquery-git.min.js","cutom.js"];
+;});
 ;--------------------------------------->
 APP.mode_spa = false
 
