--- a/www/app/setup.ini
+++ b/www/app/setup.ini
@@ -38,13 +38,13 @@ APP.lang = id
 ;just multiple/clone it to your routes, for an example "spa_contact.htm"
 ;for testing, replace the scripts below into models/index.php (inside the function)
 ;--------------------------------------->
-;custom your spa_index.htm in app/templates folder
-;and paste the code below inside the function in app/models/index.php
 ;$f3->view('spa_index.htm',function($add){
 ;    $add->css=["css1.css","css2.css"];
 ;    $add->js=["https://releases.jquery.com/git/jquery-git.min.js","cutom.js"];
 ;});
 ;--------------------------------------->
+;warning: multi slug route url type / not supported yet! (exp: /slug1/slug2.. will not work)
+
 APP.mode_spa = false
 
 ;home site on index route
