add creating info

--- a/www/app/setup.ini
+++ b/www/app/setup.ini
@@ -34,8 +34,8 @@ APP.lang = id
 
 ;SPA mode (single page application) (optional)
 ;if SPA mode is set to true then the script will generate the file name "spa_index.htm" for experimental
-;do not delete spa_index.htm file, however the script will still recreate it by default
-;just multiple/clone it to your routes, for an example "spa_contact.htm"
+;do not delete spa_index.htm file, however the script will recreate it by default
+;just copy/clone it to your another routes, for an example "spa_contact.htm"
 ;for testing, replace the scripts below into models/index.php (inside the function)
 ;--------------------------------------->
 ;$f3->view('spa_index.htm',function($add){
