add dry method on objest additional script on view function

--- a/www/app/setup.ini
+++ b/www/app/setup.ini
@@ -40,7 +40,7 @@ APP.lang = id
 ;--------------------------------------->
 ;$f3->view('spa_index.htm',function($add){
 ;    $add->css=["css1.css","css2.css"];
-;    $add->js=["https://releases.jquery.com/git/jquery-git.min.js","cutom.js"];
+;    $add->js=["https://releases.jquery.com/git/jquery-git.min.js","custom.js"];
 ;});
 ;--------------------------------------->
 ;warning: multi slug route url type / not supported yet! (exp: /slug1/slug2.. will not work)
@@ -64,7 +64,7 @@ APP.version = 0.1.0
 ;DEV Variable : set your app as development or production mode
 ;read more: https://github.com/ryzaer/fatfree-skeleton
 ;(if true) route will POST stat to active auto reload
-DEV.auto=true
+DEV.auto=false
 ;(if true) auto write function views in models folder
 DEV.model=true
 ;(if true) render and minify all css,js & html
