add setup.ini info

--- a/www/app/setup.ini
+++ b/www/app/setup.ini
@@ -65,7 +65,7 @@ APP.version = 0.1.0
 ;read more: https://github.com/ryzaer/fatfree-skeleton
 ;(if true) route will POST stat to active auto reload
 DEV.auto=false
-;(if true) auto write function views in models folder
+;(if true) auto create function views in models folder & other scripts
 DEV.model=true
 ;(if true) render and minify all css,js & html
 DEV.minified=true
